# GAN-Enhanced-Phishing-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
data/: readme.md
data/processed/: GAN_legitimate_samples.csv  GAN_phishing_samples.csv  legitimate.csv  phishing.csv
experiments/: experiment_log.csv
notebooks/: Legit_and_Phish_Analysis.ipynb  Model_training.ipynb  Phish_Legit_FeatureEngineering.ipynb  error_analysis.ipynb  exploration.ipynb  readme.md
results/: output.csv
scripts/: feature_engineering.py  gan_samples_generate.py
src/: __init__.py
src/data/: __init__.py  dataset.py  preprocess.py
src/evaluation/: error_analysis.py  metrics.py
src/models/: __init__.py  classifier.py  gan.py
src/training/: __init__.py  train_classifier.py  train_gan.py
src/utils/: __init__.py  seed.py
tests/: __init__.py  test_dataset.py
