[project]
name = "gan-enhanced-phishing-detection"
version = "0.1.0"
description = "Phishing detection pipeline with GAN augmentation and gradient boosting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "torch>=2.0",
    "torchvision>=0.15",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N803"]  # X, y are ML conventions

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
